# RoverDrivetrain-2026

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: fastdds.xml
diff_drive/: CMakeLists.txt  README.md  package.xml
diff_drive/config/: diff_drive_controllers.yaml
diff_drive/description/urdf/: diff_drive.ros2_control.xacro  diff_drive.urdf.xacro  diff_drive_description.urdf.xacro
diff_drive/launch/: diff_drive.launch.py
scripts/: setup_can.sh
